fail_crate/tests/default_and_optional.stderr
error: Parameterless `default` is not needed when `optional` is true. Remove `default`.
 --> fail_crate/tests/default_and_optional.rs:5:11
  |
5 |     #[new(default, optional)]
  |           ^^^^^^^
